# framework.uifw.edje

./: .gitignore  AUTHORS  ChangeLog  NEWS  RESET  configure.ac  edje-tools.manifest  edje.rebase.complete  edje.supp  readme.slp2
data/: Makefile.am  edc.vba  edc.vim
data/images/: Makefile.am
debian/: SVN_REV  changelog  control  libedje-bin.install  libedje-dev.install  libedje-svn-01.shlibs  libedje.install  libedje.shlibs  rules
doc/: edje_examples.dox
packaging/: edje.spec
src/: Makefile.am
src/examples/: animations2.c  edje-animations.c  edje-basic.c  edje-basic2.c  edje-box.c  edje-box2.c  edje-color-class.c  edje-drag.c  edje-perspective.c  edje-signals-messages.c  edje-swallow.c  edje-swallow2.c  edje-table.c  edje-text.c  edje_example.c  multisense.edc  signals2.c  sigtest.c
src/lib/: Edje.h  Edje_Edit.h  Edje_Multisense_Ui_Module.h  Makefile.am  edje_cache.c  edje_calc.c  edje_callbacks.c  edje_container.c  edje_convert.h  edje_data.c  edje_edit.c  edje_embryo.c  edje_entry.c  edje_load.c  edje_lua.c  edje_lua2.c  edje_lua_script_only.c  edje_main.c  edje_match.c  edje_message_queue.c  edje_module.c  edje_multisense.c  edje_multisense_ui.c  edje_private.h  edje_program.c  edje_smart.c  edje_text.c  edje_textblock_styles.c  edje_util.c  edje_var.c
src/modules/: Makefile  (+2 more)
src/modules/slp_sound_haptic/: Makefile  Makefile.am  Makefile.in  haptic.h  module.la  module_la-sound_haptic.lo  sound.h  sound_haptic.c
src/modules/slp_sound_haptic/.libs/: module.lai  module.soT
wearable/: edje.pc
wearable/src/modules/pa_snd_player/: Makefile.am
(+28 files in other folders)
